# SpaceX

./: .gitignore  Dockerfile  main.py  pyproject.toml
notebooks/: launchpads.ipynb  rockets.ipynb  ships.ipynb
src/: base_extractor.py  main.py
src/config/: __init__.py  endpoints_config.py  logging_config.py
src/ships_etl/: __init__.py  ships_extract.py  ships_load.py  ships_transform.py
