[project]
name = "spacex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "colorlog>=6.9.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
]
